core/src/ast/snapshots/span_testing/diplomat_core__ast__logging__tests__flush@lifetime_redefine.rs_ugly.snap
---
source: core/src/ast/logging.rs
expression: self.buf
---
Diplomat error: Lifetime declared twice in the same scope
In src/ast/snapshots/span_testing/lifetime_redefine.rs:3:35:
...'a, 'a>() {...
        ^
Lifetime 'a already exists.
